theme/edumy/style/menu.css
/* ... */
li.mm-listitem {
  color: rgba(0, 0, 0, .75);
  color: var(--mm-color-text);
  border-bottom: 1px solid #2d2d2d;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap
}
.mm-listitem a,
.mm-listitem a:hover {
  text-decoration: none
}
.mm-listitem__btn,
.mm-listitem__text {
  color: inherit;
  display: block;
  padding-top: 12px;
  padding-top: calc((var(--mm-listitem-size) - var(--mm-line-height))/ 2);
  padding-bottom: 12px;
  padding-bottom: calc((var(--mm-listitem-size) - var(--mm-line-height))/ 2)
}
.mm-listitem__text {
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  padding-left: 20px;
  padding-right: 10px;
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -ms-flex-preferred-size: 10%;
  flex-basis: 10%
}
.mm-listitem__btn {
  -webkit-tap-highlight-color: rgba(255, 255, 255, .4);
  tap-highlight-color: rgba(255, 255, 255, .4);
  -webkit-tap-highlight-color: var(--mm-color-background-emphasis);
  tap-highlight-color: var(--mm-color-background-emphasis);
  background: rgba(3, 2, 1, 0);
  border-color: inherit;
  width: auto;
  padding-right: 54px;
  position: relative
}
.mm-listitem__btn:not(.mm-listitem__text) {
  border-left-width: 0;
  border-left-style: solid
}
.mm-listitem_selected>.mm-listitem__text {
  background: rgba(255, 255, 255, .4);
  background: var(--mm-color-background-emphasis)
}
.mm-listitem_opened>.mm-listitem__btn,
.mm-listitem_opened>.mm-panel {
  background: rgba(0, 0, 0, .05);
  background: var(--mm-color-background-highlight)
}
.mm-panels>.mm-panel>.mm-listview {
  margin: 20px -20px
}
.mm-panels>.mm-panel>.mm-listview:first-child,
.mm-panels>.mm-panel>.mm-navbar+.mm-listview {
  margin-top: -20px
}
.mm-panels>.mm-panel>.mm-navbar+.mm-listview {
  margin-top: 20px;
}
.mm-listitem_divider {
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  background: rgba(0, 0, 0, .05);
  background: var(--mm-color-background-highlight);
  font-size: 75%;
  text-transform: uppercase;
  min-height: 20px;
  min-height: var(--mm-line-height);
  padding: 6.5px;
  padding: calc(((var(--mm-listitem-size) * .75) - var(--mm-line-height)) * .5);
  padding-right: 10px;
  padding-left: 20px
}
.mm-listitem_spacer {
  padding-top: 44px;
  padding-top: var(--mm-listitem-size)
}
.mm-listitem_spacer>.mm-btn_next {
  top: 44px;
  top: var(--mm-listitem-size)
}
[dir=rtl] .mm-listitem:after {
  left: 0;
  right: 20px
}
[dir=rtl] .mm-listitem__text {
  padding-left: 10px;
  padding-right: 20px
}
[dir=rtl] .mm-listitem__btn {
  padding-left: 54px;
  border-left-width: 0;
  border-left-style: none
}
[dir=rtl] .mm-listitem__btn:not(.mm-listitem__text) {
  padding-right: 0;
  border-right-width: 1px;
  border-right-style: solid
}
.mm-page {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  position: relative
}
.mm-slideout {
  -webkit-transition: -webkit-transform .4s ease;
  transition: -webkit-transform .4s ease;
  -o-transition: transform .4s ease;
  transition: transform .4s ease;
  transition: transform .4s ease, -webkit-transform .4s ease;
  z-index: 1
}
.mm-wrapper_opened {
  overflow-x: hidden;
  position: relative
}
.mm-wrapper_background .mm-page {
  background: inherit
}
.mm-menu_offcanvas {
  display: none;
  position: fixed;
  right: auto;
  z-index: 0
}
.mm-menu_offcanvas.mm-menu_opened {
  display: block
}
.mm-menu_offcanvas {
  /* width: 80%; */
  width: 80vw;
  min-width: 240px;
  max-width: 440px
}
.mm-wrapper_opening .mm-menu_offcanvas.mm-menu_opened~.mm-slideout {
  -webkit-transform: translate3d(80vw, 0, 0);
  transform: translate3d(80vw, 0, 0)
}
@media all and (max-width:300px) {
  .mm-wrapper_opening .mm-menu_offcanvas.mm-menu_opened~.mm-slideout {
    -webkit-transform: translate3d(240px, 0, 0);
    transform: translate3d(240px, 0, 0)
  }
}
@media all and (min-width:550px) {
  .mm-wrapper_opening .mm-menu_offcanvas.mm-menu_opened~.mm-slideout {
    -webkit-transform: translate3d(440px, 0, 0);
    transform: translate3d(440px, 0, 0)
  }
}
.mm-wrapper__blocker {
  background: rgba(3, 2, 1, 0);
  overflow: hidden;
  display: none;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2
}
.mm-wrapper_blocking {
  overflow: hidden
}
.mm-wrapper_blocking body {
  overflow: hidden
}
.mm-wrapper_blocking .mm-wrapper__blocker {
  display: block
}
.mm-sronly {
  border: 0 !important;
  clip: rect(1px, 1px, 1px, 1px) !important;
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important;
  white-space: nowrap !important;
  width: 1px !important;
  min-width: 1px !important;
  height: 1px !important;
  min-height: 1px !important;
  padding: 0 !important;
  overflow: hidden !important;
  position: absolute !important
}
/* ... */

